# test-sphinx

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NEWS.md  README.md  changelog.html  ci_workflows.html  contributing.html  genindex.html  getting_started.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: ci_workflows.doctree  getting_started.doctree  index.doctree
.doctrees/api/: index.doctree
.github/: PULL_REQUEST_TEMPLATE.md  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs_request.yml  feature_request.yml
.github/workflows/: build.yml  ci.yml  docs.yml  labels.yml  release.yml  test.yml  uv-env.yml
_modules/: index.html
_modules/ditto/: example.html  logging_config.html
_sources/: getting_started.rst.txt  index.rst.txt
_sources/api/: index.rst.txt
api/: index.html
docs/source/: ci_workflows.rst  conf.py  index.rst
docs/source/_static/css/: custom.css
docs/source/_templates/: footer-logo.html
src/ditto/: __init__.py  _version.py  example.py  logging_config.py
tests/: test_example.py  test_logging_config.py  test_version.py
